Docker compose, config to env
Moved to Docker Compose for running on Pi. Moved configuration to
environment vars vs. files for full config via docker-compose.yml file.

--- a/flightaware/Dockerfile
+++ b/flightaware/Dockerfile
@@ -11,4 +11,9 @@ RUN wget http://uk.flightaware.com/adsb/piaware/files/packages/pool/piaware/p/pi
 EXPOSE 8080
 EXPOSE 30003
 
-CMD ["piaware", "-debug"]
+COPY ./start.sh start.sh
+RUN chmod +x start.sh
+
+ENV PIAWARE_HOST="" PIAWARE_PORT="" PIAWARE_USER="" PIAWARE_PASSWORD="" PIAWARE_FEEDER_ID=""
+
+CMD ["/start.sh"]
